syntax = "proto3";

package user;

option go_package = ".";

service UserService {
    rpc CreateUser(UserMessage) returns (UserMessage);
    rpc UpdateUser(UserMessage) returns (UserMessage);
    rpc GetUser(UserMessage) returns (UserMessage);
    rpc DeleteUser(UserMessage) returns (UserMessage);
}

message UserMessage {
    string id = 1;
    string login = 2;
    string email = 3;
    string password = 4;
}
